public/lite/api/en/r1.5/_sources/generate/unabridged_api.rst.txt

.. toctree::
   :maxdepth: 5

   namespace_caffe.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__converter.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset__config.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset__text.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset__transforms.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset__vision.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__kernel.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__ops.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__registry.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__registry__opencl.rst

.. toctree::
   :maxdepth: 5

   namespace_onnx.rst

.. toctree::
   :maxdepth: 5

   namespace_tensorflow.rst

.. toctree::
   :maxdepth: 5

   namespace_tflite.rst
