public/lite/api/en/r1.6/_sources/generate/unabridged_api.rst.txt

.. toctree::
   :maxdepth: 5

   namespace_abstract.rst

.. toctree::
   :maxdepth: 5

   namespace_caffe.rst

.. toctree::
   :maxdepth: 5

   namespace_deprecated.rst

.. toctree::
   :maxdepth: 5

   namespace_deprecated__api.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__abstract.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__change.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__common.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__converter.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset__config.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset__text.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset__transforms.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__dataset__vision.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__deprecated.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__deprecated__api.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__deprecated__api__mindspore.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__id_generator.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__kernel.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__label_manage.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__ops.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__prim.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__registry.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__registry__opencl.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__tensor.rst

.. toctree::
   :maxdepth: 5

   namespace_mindspore__utils.rst

.. toctree::
   :maxdepth: 5

   namespace_onnx.rst

.. toctree::
   :maxdepth: 5

   namespace_tensorflow.rst

.. toctree::
   :maxdepth: 5

   namespace_tflite.rst
